@@ -26,7 +26,6 @@ DEVFILES = \
 	dli.dev \
 	hp3488.dev \
 	ibmbladecenter.dev \
-	ibmh8.dev \
 	icebox.dev \
 	icebox3.dev \
 	ics8064.dev \
