@@ -1,70 +1,0 @@
-# 
-# $Id$
-#
-# Direct H8 control in IBM xSeries nodes
-#
-# This device configuration supports direct control of IBM xSeries H8
-# service processors via an RS485-RS232 converter and the 'h8power'
-# utility (not publicly released due to concerns about reverse engineered
-# IBM IP)
-#
-specification "ibmh8" {
-	timeout  	30
-
-	script login {
-		expect "h8power> "
-	}
-	script logout {
-		send "quit\r"
-	}
-	script status_all {
-		send "stat\r"
-		expect "stat\r\n"
-		foreachnode {
-			expect "([^\r\n:]*): (timed\ out|H8\ is\ down|off|on)\r\n"
-			setplugstate $1 $2 on="on" off="off"
-		}
-		expect "h8power> "
-	}
-#	script status {
-#		send "stat %s\r"
-#		expect "stat[^\r]*\r\n"
-#		expect "([^:]*): (timed\ out|H8\ is\ down|off|on)\r\n"
-#		setplugstate $1 $2 on="on" off="off"
-#		expect "h8power> "
-#	}
-	script on {
-		send "on %s\r"
-		expect "h8power> "
-	}
-	script on_all {
-		send "on\r"
-		expect "h8power> "
-	}
-	script off {
-		send "off %s\r"
-		expect "h8power> "
-	}
-	script off_all {
-		send "off\r"
-		expect "h8power> "
-	}
-	script cycle {
-		send "off %s\r"
-		expect "h8power> "
-
-		delay 4
-
-		send "on %s\r"
-		expect "h8power> "
-	}
-	script cycle_all {
-		send "off\r"
-		expect "h8power> "
-
-		delay 4
-
-		send "on\r"
-		expect "h8power> "
-	}
-}
