@@ -25,7 +25,6 @@
 #include "/etc/powerman/dli.dev"
 #include "/etc/powerman/hp3488.dev"
 #include "/etc/powerman/ibmbladecenter.dev"
-#include "/etc/powerman/ibmh8.dev"
 #include "/etc/powerman/icebox3.dev"
 #include "/etc/powerman/icebox.dev"
 #include "/etc/powerman/ics8064.dev"
@@ -53,12 +52,13 @@
 
 #device "b1" "baytech-rpc28-nc" "cyclades1:7032"
 #device "b2" "baytech-rpc28-nc" "cyclades1:7016"
-#device "b3" "baytech-rpc28-nc" "cyclades1:7017"
+#device "b3" "baytech-rpc28-nc" "/usr/bin/conman -j -Q b3 |&"
 #device "b4" "baytech-rpc3-nc"  "baytech4:23"
 #device "lpc" "dli" "/usr/sbin/httppower -u http://192.168.0.100 |&"
 #device "plm" "plmpower" "/usr/sbin/plmpower -d /dev/ttyS1 |&"
 #device "wti1" "wti-rps10" "/dev/ttyS0" "9600,8n1"
 #device "wti2" "wti-rps10" "/dev/ttyS2" "9600,8n1"
+#device "ipmi1" "ipmipower" "/usr/sbin/ipmipower -h py[0-10] |&"
 
 # Define nodes (the entities you turn on and off with powerman)
 # - The longhand form is one line per node like this:
@@ -84,6 +84,8 @@
 #node "t[41-60]" "b3"
 
 #node "x[1-8]" "lpc"
+
+#node "y[0-10]" "ipmi1" "py[0-10]"
 
 #node "porchlight" "plm" "A4.02.B3"
 #node "kitchen"    "plm" "A4.97.44"
